load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "enable_asserts",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_logging",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_tracing",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "enable_debug",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)

bool_flag(
    name = "disable_rtti",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
