module(name = "snap_client_toolchains")

bazel_dep(name = "bazel_skylib", version = "1.2.0")
bazel_dep(name = "rules_kotlin", version = "1.9.0", repo_name = "rules_kotlin")

bazel_dep(name = "rules_android_ndk", version = "0.1.3")

android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")