load("@bazel_skylib//lib:selects.bzl", "selects")
load("//bzl/valdi/source_set:source_set.bzl", "source_set")

package(default_visibility = ["//visibility:public"])

source_set(
    name = "source_set",
    build_setting_default = "infer",
)

# Build explicitly configured to use the debug source set
config_setting(
    name = "debug",
    flag_values = {":source_set": "debug"},
)

# Build explicitly configured to use the release source set
config_setting(
    name = "release",
    flag_values = {":source_set": "release"},
)

config_setting(
    name = "infer",
    flag_values = {":source_set": "infer"},
)

# Infer debug source set based on the debugish snap flavors
selects.config_setting_group(
    name = "infer_debug",
    match_all = [
        ":infer",
        ":snap_flavors_debugish",
    ],
)

# Infer release source set based on the releaseish snap flavors
selects.config_setting_group(
    name = "infer_release",
    match_all = [
        ":infer",
        ":snap_flavors_releaseish",
    ],
)

selects.config_setting_group(
    name = "snap_flavors_debugish",
    match_any = [
        "@snap_platforms//flavors:client_development",
        "@snap_platforms//flavors:platform_development",
        "@snap_platforms//flavors:platform_address_sanitizer",
        "@snap_platforms//flavors:master",
        "@snap_platforms//flavors:gold",
        "@snap_platforms//flavors:sanitizer",
        "@snap_platforms//flavors:sanitizer_debug",
        "@snap_platforms//flavors:development_native_snapos",
    ],
)

selects.config_setting_group(
    name = "snap_flavors_releaseish",
    match_any = [
        "@snap_platforms//flavors:alpha",
        "@snap_platforms//flavors:production",
        "@snap_platforms//flavors:diagnostic_production",
        "@snap_platforms//flavors:coverage",
        "@snap_platforms//flavors:code_coverage",
        "@snap_platforms//flavors:addlive_streamer",
        "@snap_platforms//flavors:addlive_streamer_asserts",
        "@snap_platforms//flavors:production_snapos",
        "@snap_platforms//flavors:production_native_snapos",
    ],
)
